First commit, changes are not stable

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>Change Calculator</title>
   </head>
   <body>
-    <!-- Write your markup here -->
-
-    <!-- Don't forget to add your <script> tag here -->
-
+    <h1>Change Calculator</h1>
+    <input id="Amount Given" type="number" step="1" placeholder="Amount Given">
+    <input id="Price" type="number" step="1"  placeholder="Price">
+    <p id="Change" type="number" step="1"  placeholder="Change Due">Change</p>
+    <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
