Not better, just more

--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
   </head>
   <body>
     <h1>Change Calculator</h1>
-    <input id="Amount Given" type="number" step="1" placeholder="Amount Given">
-    <input id="Price" type="number" step="1"  placeholder="Price">
-    <p id="Change" type="number" step="1"  placeholder="Change Due">Change</p>
+    <input id="amount-received" type="number" step="1" placeholder="Amount Given">
+    <input id="amount-due" type="number" step="1"  placeholder="Price">
+    <p id="dollars-output" type="number" step="1"  placeholder="Dollars">Dollars</p>
+    <p id="quarters-output" type="number" step="1"  placeholder="Quarters">Quarters</p>
+    <p id="dimes-output" type="number" step="1"  placeholder="Dimes">Dimes</p>
+    <p id="nickels-output" type="number" step="1"  placeholder="Nickels">Nickels</p>
+    <p id="pennies-output" type="number" step="1"  placeholder="Pennies">Pennies</p>
+    
+    
+    <button id="calculate-change">Calculate</button>
     <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
