--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <h1>Change Calculator</h1>
     <input id="amount-received" type="number" step="1" placeholder="Amount Given">
     <input id="amount-due" type="number" step="1"  placeholder="Price">
-    <p id="dollars-output" type="number" step="1"  placeholder="Dollars">Dollars</p>
-    <p id="quarters-output" type="number" step="1"  placeholder="Quarters">Quarters</p>
-    <p id="dimes-output" type="number" step="1"  placeholder="Dimes">Dimes</p>
-    <p id="nickels-output" type="number" step="1"  placeholder="Nickels">Nickels</p>
-    <p id="pennies-output" type="number" step="1"  placeholder="Pennies">Pennies</p>
-    
+    <p id="dollars-output">Dollars: <span id="dollars-value"></span></p>
+    <p id="quarters-output">Quarters: <span id="quarters-value"></span></p>
+    <p id="dimes-output">Dimes: <span id="dimes-value"></span></p>
+    <p id="nickels-output">Nickels: <span id="nickels-value"></span></p>
+    <p id="pennies-output">Pennies: <span id="pennies-value"></span></p>
     
     <button id="calculate-change">Calculate</button>
     <script src="main.js" charset="utf-8"></script>
