updated font colors

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p id="dimes-output">Dimes:  <span id="dimes-value"></span></p>
     <p id="nickels-output">Nickels:  <span id="nickels-value"></span></p>
     <p id="pennies-output">Pennies:  <span id="pennies-value"></span></p>
-    <p id="total-output">Total:  <span id="total-value"></span></p>
+    <p id="total-output">Change Total:  <span id="total-value"></span></p>
     <button id="calculate-change"></button>
     <script src="main.js" charset="utf-8"></script>
   </body>
