--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Change Calculator</h1>
     <input id="amount-received" type="number" step="0.01" placeholder="Amount Given">
     <input id="amount-due" type="number" step="0.01" placeholder="Price">
-    <p id="twnty-dollars-output">$20:<span id="20-dollars-value"></span></p>
+    <p id="twnty-dollars-output">$20: <span id="20-dollars-value"></span></p>
     <p id="ten-dollars-output">$10: <span id="10-dollars-value"></span></p>
     <p id="fiv-dollars-output">$5:  <span id="5-dollars-value"></span></p>
     <p id="two-dollars-output">$2:  <span id="2-dollars-value"></span></p>
@@ -19,7 +19,7 @@
     <p id="dimes-output">Dimes:  <span id="dimes-value"></span></p>
     <p id="nickels-output">Nickels:  <span id="nickels-value"></span></p>
     <p id="pennies-output">Pennies:  <span id="pennies-value"></span></p>
-    <p id="total-output">Change Total:  <span id="total-value"></span></p>
+    <p id="total-output">Change Total:$  <span id="total-value"></span></p>
     <button id="calculate-change"></button>
     <script src="main.js" charset="utf-8"></script>
   </body>
